[workspace]
members = [
  "3Sum",
  "Group Anagrams",
  "Longest Substring Without Repeating Characters",
  "Set Matrix Zeroes",
  "Longest Palindromic Substring",
  "Increasing Triplet Subsequence",
  "Count and Say",
  "Add Two Numbers",
  "Odd Even Linked List",
  "Binary Tree Inorder Traversal",
  "Number of Islands",
]

[workspace.package]
license-file = "LICENSE"
authors = ["Evgeniy Malyutin <evxn@users.noreply.github.com>"]
