[workspace]
resolver = "2"
members = [
  "15-three-sum",
  "49-group-anagrams",
  "3-longest-substring-without-repeating-characters",
  "73-set-matrix-zeroes",
  "5-longest-palindromic-substring",
  "334-increasing-triplet-subsequence",
  "38-count-and-say",
  "2-add-two-numbers",
  "328-odd-even-linked-list",
  "94-binary-tree-inorder-traversal",
  "200-number-of-islands",
  "347-top-k-frequent-elements",
  "271-encode-and-decode-strings",
  "238-product-of-array-except-self",
  "36-valid-sudoku",
  "128-longest-consecutive-sequence",
]

[workspace.package]
license-file = "LICENSE"
authors = ["Evgeniy Malyutin <evxn@users.noreply.github.com>"]
