[workspace]
resolver = "2"
members = [
  "15-three-sum",
  "49-group-anagrams",
  "3-longest-substring-without-repeating-characters",
  "73-set-matrix-zeroes",
  "5-longest-palindromic-substring",
  "334-increasing-triplet-subsequence",
  "38-count-and-say",
  "2-add-two-numbers",
  "328-odd-even-linked-list",
  "94-binary-tree-inorder-traversal",
  "200-number-of-islands",
  "347-top-k-frequent-elements",
  "271-encode-and-decode-strings",
  "238-product-of-array-except-self",
  "36-valid-sudoku",
  "128-longest-consecutive-sequence",
  "42-trapping-rain-water",
  "146-lru-cache",
  "226-invert-binary-tree",
  "104-maximum-depth-of-binary-tree",
  "543-diameter-of-binary-tree",
  "110-balanced-binary-tree",
  "100-same-tree",
  "572-subtree-of-another-tree",
  "235-lowest-common-ancestor-of-a-binary-search-tree",
  "236-lowest-common-ancestor-of-a-binary-tree",
  "102-binary-tree-level-order-traversal",
]

[workspace.package]
license-file = "LICENSE"
authors = ["Evgeniy Malyutin <evxn@users.noreply.github.com>"]
